--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "next",
+    "@capacitor/core": "next",
     "@vueuse/core": "^10.9.0",
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
@@ -17,6 +19,7 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@capacitor/cli": "next",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
