--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@capacitor/android": "next",
     "@capacitor/core": "next",
+    "@vue/cli": "^5.0.8",
     "@vueuse/core": "^10.9.0",
-    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
