--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@capacitor/android": "next",
     "@capacitor/core": "next",
+    "@tailwindcss/forms": "^0.5.7",
     "@vue/cli": "^5.0.8",
     "@vueuse/core": "^10.9.0",
     "core-js": "^3.8.3",
