--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.3.3"
   },
-  
   "devDependencies": {
     "@capacitor/cli": "6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
