--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@vue/cli": "^5.0.8",
     "@vueuse/core": "^10.9.0",
