--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@capacitor/android": "next",
+    "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/assets": "^3.0.5",
     "@capacitor/core": "^6.0.0-rc.2",
