--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@emailjs/browser": "^4.4.1",
+    "@ionic/cli": "^7.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "@vue/cli": "^5.0.8",
     "@vueuse/core": "^10.9.0",
