--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@emailjs/browser": "^4.4.1",
     "@ionic/cli": "^7.2.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@unhead/vue": "^1.11.14",
     "@vue/cli": "^5.0.8",
     "@vueuse/core": "^10.9.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.3"
   },
