--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
           branch: gh-pages # Branch where the website will be deployed (GitHub Pages branch)
           folder: dist # Folder that contains the built files
           token: ${{ secrets.personel_website_token }} # Use your updated personal access token secret
-          repository-name: wkdkavishka # The repository where the website will be deployed
+          repository-name: wkdkavishka/wkdkavishka # Correct repository format
