--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,38 @@
-name: Build and Deploy to GitHub Pages
+name: Deploy to wkdkavishka Repository
 
 on:
   push:
     branches:
-      - master # Trigger action on push to the master branch
+      - wkdkavishka-vue
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16" # or the version you are using
+          node-version: '14'
 
       - name: Install dependencies
         run: |
           npm install
 
-      - name: Build Vue.js project
+      - name: Build
         run: |
           npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4.2.2
-        with:
-          branch: gh-pages # Branch where the website will be deployed (GitHub Pages branch)
-          folder: dist # Folder that contains the built files
-          token: ${{ secrets.personel_website_token }} # Use your updated personal access token secret
-          repository-name: wkdkavishka/wkdkavishka # Correct repository format
+      - name: Deploy to wkdkavishka
+        run: |
+          git config --global user.name 'YourGitHubUsername'
+          git config --global user.email 'your_email@example.com'
+          git remote add target https://github.com/wkdkavishka/wkdkavishka.git
+          git add .
+          git commit -m 'Deploy from wkdkavishka-vue'
+          git push target HEAD:main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
