--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,14 @@ jobs:
 
       # Deploy to wkdkavishka repository
       - name: Deploy to wkdkavishka
+        env:
+          TOKEN: ${{ secrets.DEPLOY_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git clone --branch=origin https://x-access-token:${{ secrets.DEPLOY_TOKEN }}@github.com/wkdkavishka/wkdkavishka.git deploy-repo
+          git clone --branch=origin https://x-access-token:${TOKEN}@github.com/wkdkavishka/wkdkavishka.git deploy-repo
           rsync -av --delete dist/ deploy-repo/
           cd deploy-repo
           git add .
-          git commit -m "Deploy from wkdkavishka-vue [skip ci]"
+          git commit -m "Deploy from wkdkavishka-vue [skip ci]" || echo "No changes to commit"
           git push
