--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@unhead/vue": "^1.11.14",
     "@vue/cli": "^5.0.8",
     "@vueuse/core": "^10.9.0",
+    "@vueuse/head": "^2.0.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
