ADD generate sitemap on push

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build-wkdkavishka": "./deploy.sh"
+    "build-wkdkavishka": "./deploy.sh",
+    "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "dependencies": {
     "@capacitor/android": "6.2.0",
