--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -5,12 +5,18 @@ on:
     branches:
       - master
       - dev
+  schedule:
+    - cron: "0 0 * * 0" # Runs every Sunday at midnight UTC
 
 jobs:
   update-sitemap:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Ensure public directory exists
+        run: mkdir -p public
 
       - name: Generate sitemap.xml
         run: |
@@ -38,7 +44,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add public/sitemap.xml
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update sitemap lastmod dates"
+          git commit --allow-empty -m "Update sitemap lastmod dates"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
