--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,11 @@
 {
+  "name": "WKDKavishka",
+  "short_name": "WKDKavishka",
+  "description": "WKDKavishka - Software Developer Portfolio",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#134E4A",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
@@ -61,6 +68,31 @@
       "src": "./img/icons/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
+    },
+    {
+      "src": "./img/icons/favicon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/web-app-manifest-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/web-app-manifest-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/favicon.ico",
+      "sizes": "48x48",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "./img/icons/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     },
     {
       "src": "./img/icons/msapplication-icon-144x144.png",
