--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-lazyload": "^3.0.0",
     "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.3"
