--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "wkdkavishka-vue",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build-wkdkavishka": "./deploy.sh",
-    "serve-production": "vue-cli-service build && npx http-server dist"
+    "serve-production": "vue-cli-service build && npx http-server dist",
+    "electron:dev": "vue-cli-service build && electron .",
+    "electron:build": "npm run build && electron-builder",
+    "package": "npm run electron:build"
   },
   "dependencies": {
     "@capacitor/android": "6.2.0",
@@ -46,6 +50,9 @@
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-typescript": "^9.1.0",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^9.1.2",
+    "electron": "^34.1.0",
+    "electron-builder": "^25.1.8",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
