--- a/.github/workflows/build-linux-and-windows.yml
+++ b/.github/workflows/build-linux-and-windows.yml
@@ -2,8 +2,11 @@ name: Build and Release Electron App
 
 on:
   push:
+    branches:
+      - dev
+      - master
     tags:
-      - "v*.*.*" # Triggers on version tags like v1.0.0
+      - "v*.*.*" # Still allow tag-based releases
   workflow_dispatch:
 
 jobs:
