--- a/package.json
+++ b/package.json
@@ -103,8 +103,7 @@
     "linux": {
       "icon": "public/img/icons/android-chrome-512x512.png",
       "target": [
-        "AppImage",
-        "deb"
+        "AppImage"
       ],
       "category": "Utility"
     },
