--- a/.github/workflows/build-linux-and-windows.yml
+++ b/.github/workflows/build-linux-and-windows.yml
@@ -76,4 +76,4 @@ jobs:
         with:
           files: artifacts/**/*.*
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
