--- a/.github/workflows/build-linux-and-windows.yml
+++ b/.github/workflows/build-linux-and-windows.yml
@@ -40,6 +40,8 @@ jobs:
         run: npm run build
 
       - name: Build Electron app (Linux & Windows)
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "========== ENVIRONMENT =========="
           env
