--- a/.github/workflows/build-linux-and-windows.yml
+++ b/.github/workflows/build-linux-and-windows.yml
@@ -63,19 +63,18 @@ jobs:
         with:
           name: build-artifacts
           path: dist/*
+#   release:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Download all build artifacts
+#         uses: actions/download-artifact@v4
+#         with:
+#           path: artifacts
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download all build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: artifacts/**/*.*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Create GitHub Release
+#         uses: softprops/action-gh-release@v2
+#         with:
+#           files: artifacts/**/*.*
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
